# devices-test

./: Dockerfile  README.md  client.py  docker-compose.yml  pyproject.toml  pytest.ini  utils.py
tests/: conftest.py  test_device_service.py
