[tool.poetry]
name = "devices-test"
version = "0.1.0"
description = ""
authors = ["a.letenkov <a.letenkov@corp.vk.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pytest = "^6.2.4"
websocket-client = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
